Update to version 0.3.2 with autodeployment
Added support for ProductTypes in products
Added support for autodeployment